[gd_scene load_steps=37 format=2]

[ext_resource path="res://assets/characters/enemies/enemy_boss.png" type="Texture" id=1]
[ext_resource path="res://assets/characters/enemies/enemy_boss_airborne.png" type="Texture" id=2]
[ext_resource path="res://assets/characters/enemies/enemy_boss_jump.png" type="Texture" id=3]
[ext_resource path="res://assets/characters/enemies/enemy_boss_land.png" type="Texture" id=4]
[ext_resource path="res://assets/characters/enemies/enemy_boss_mark_ui.png" type="Texture" id=5]
[ext_resource path="res://assets/characters/enemies/enemy_boss_throw.png" type="Texture" id=6]
[ext_resource path="res://scenes/tasks/boss/Boss.gd" type="Script" id=7]
[ext_resource path="res://scenes/tasks/boss/BossStates.gd" type="Script" id=8]
[ext_resource path="res://assets/characters/enemies/boss_shadow.png" type="Texture" id=9]
[ext_resource path="res://assets/sfx/combat/boss/boss_land_2.wav" type="AudioStream" id=10]
[ext_resource path="res://assets/sfx/combat/boss/boss_land_1.wav" type="AudioStream" id=11]
[ext_resource path="res://utils/MultiAudioPlayer.tscn" type="PackedScene" id=12]
[ext_resource path="res://assets/sfx/combat/boss/boss_land_3.wav" type="AudioStream" id=13]
[ext_resource path="res://assets/sfx/combat/boss/boss_jump_2.wav" type="AudioStream" id=14]
[ext_resource path="res://assets/sfx/combat/boss/boss_jump_1.wav" type="AudioStream" id=15]
[ext_resource path="res://assets/sfx/combat/boss/boss_jump_3.wav" type="AudioStream" id=16]
[ext_resource path="res://assets/sfx/combat/boss/boss_throw_3.wav" type="AudioStream" id=17]
[ext_resource path="res://assets/sfx/combat/boss/boss_throw_1.wav" type="AudioStream" id=18]
[ext_resource path="res://assets/sfx/combat/boss/boss_throw_2.wav" type="AudioStream" id=19]
[ext_resource path="res://assets/sfx/combat/boss/boss_fall.wav" type="AudioStream" id=20]

[sub_resource type="CapsuleShape2D" id=13]
height = 8.0

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 6 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 6 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 6 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 6 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 6 )
region = Rect2( 64, 64, 64, 64 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": false,
"name": "airborne",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ) ],
"loop": false,
"name": "jump",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ), SubResource( 5 ) ],
"loop": false,
"name": "land",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": false,
"name": "throw",
"speed": 7.0
} ]

[sub_resource type="AudioStreamRandomPitch" id=14]
resource_local_to_scene = true

[sub_resource type="AudioStreamRandomPitch" id=15]
resource_local_to_scene = true

[sub_resource type="AudioStreamRandomPitch" id=16]
resource_local_to_scene = true

[sub_resource type="AudioStreamRandomPitch" id=17]
resource_local_to_scene = true

[node name="Boss" type="Area2D" groups=["food", "needs_player"]]
script = ExtResource( 7 )

[node name="BossStates" type="Node" parent="."]
script = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -3 )
rotation = 1.5708
shape = SubResource( 13 )

[node name="Mark" type="Sprite" parent="."]
visible = false
z_index = -10
texture = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -31 )
frames = SubResource( 1 )
animation = "idle"
speed_scale = 2.0

[node name="ThrowPos" type="Position2D" parent="AnimatedSprite"]
position = Vector2( 17, 31 )

[node name="ChangeStateTimer" type="Timer" parent="."]
one_shot = true

[node name="Shadow" type="Sprite" parent="."]
visible = false
z_index = -5
texture = ExtResource( 9 )

[node name="LandSFX" parent="." instance=ExtResource( 12 )]
stream = SubResource( 14 )
audio_streams = [ ExtResource( 11 ), ExtResource( 10 ), ExtResource( 13 ) ]

[node name="JumpSFX" parent="." instance=ExtResource( 12 )]
stream = SubResource( 15 )
audio_streams = [ ExtResource( 15 ), ExtResource( 14 ), ExtResource( 16 ) ]

[node name="ThrowSFX" parent="." instance=ExtResource( 12 )]
stream = SubResource( 16 )
audio_streams = [ ExtResource( 18 ), ExtResource( 19 ), ExtResource( 17 ) ]

[node name="FallSFX" parent="." instance=ExtResource( 12 )]
stream = SubResource( 17 )
audio_streams = [ ExtResource( 20 ) ]

[connection signal="body_entered" from="." to="." method="_on_Boss_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite" to="." method="_on_AnimatedSprite_frame_changed"]
[connection signal="timeout" from="ChangeStateTimer" to="." method="_on_ChangeStateTimer_timeout"]
